fix: fix overflow and remove name of checkbox input

--- a/src/pages/CataloguePage/CataloguePage.scss
+++ b/src/pages/CataloguePage/CataloguePage.scss
@@ -78,8 +78,7 @@
 
   &__checkbox_brand {
     height: 200px;
-    overflow: scroll;
-    overflow-x: hidden;
+    overflow: hidden scroll;
     scrollbar-color: #333333 #f9f9f9;
     scrollbar-width: thin;
   }
